--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,13 @@ steps:
 - task: PowerShell@2
   inputs:
       filePath: './kube.ps1'
+
+- task: GitHubRelease@1
+  inputs:
+    gitHubConnection: 'github.com_bhargavteja1999'
+    repositoryName: 'bhargavteja1999/kuberneteskube'
+    action: 'create'
+    target: '$(Build.SourceVersion)'
+    tagSource: 'gitTag'
+    changeLogCompareToRelease: 'lastFullRelease'
+    changeLogType: 'commitBased'
