--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -4,19 +4,24 @@
 # https://aka.ms/yaml
 
 trigger:
-- 
+- main
 
 pool:
   vmImage: windows-latest
 
 steps:
+- script: echo Hello, world!
+  displayName: 'Run a one-line script'
+
+- script: |
+    echo Add other tasks to build, test, and deploy your project.
+    echo See https://aka.ms/yaml
+  displayName: 'Run a multi-line script'
+  
 - task: KubectlInstaller@0
   inputs:
-    kubectlVersion: 'latest'
+      kubectlVersion: 'latest'
+
 - task: PowerShell@2
-  displayName: 'App Deployment'
   inputs:
-    targetType: filePath
-    filePath: ./kube.ps1
-
-
+    filePath: './kube.ps1'
