--- a/jenkins/service.yaml
+++ b/jenkins/service.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins-deployment
+  name: jenkins-service    # It's better to name the service as jenkins-service
 spec:
   selector:
-    app: jenkins
+    app: jenkins           # Matches the Pods with label app=jenkins
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 8080
-  type: NodePort
+      port: 8080           # The port clients will use to access Jenkins UI
+      targetPort: 8080      # The port the container (Jenkins Pod) is listening on
+    - protocol: TCP
+      port: 50000          # Jenkins agent communication port
+      targetPort: 50000     # Matches the container's agent communication port
+  type: NodePort            # Exposes the service externally via Node Ip
