--- a/wavecafe/service.yaml
+++ b/wavecafe/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: soft-deployment
+  name: wavecafe-service
 spec:
   selector:
-    app: soft
+    app: wavecafe
   ports:
     - protocol: TCP
       port: 80
